objects/Forgot_Password__c.object
<CustomObject>
    <fields>
        <fullName>Expires__c</fullName>
        <label>Expires</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pass_Token__c</fullName>
        <label>Pass Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forgot_Password</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Forgot Password</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FP-{00000000}</displayFormat>
        <label>Forgot Password Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forgot Password</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>